--- a/skin/style.css
+++ b/skin/style.css
@@ -265,7 +265,7 @@ h3.hello
 }
 h3.hello span
 {
-    font-family: 'Clicker Script',cursive;
+    font-family: 'Clicker Script', cursive;
     font-size: 30px;
     font-weight: 700;
     color: var(--skin-color);
@@ -710,3 +710,54 @@ h3.my-profession
     height: 50px;
     padding: 0 50px;
  }
+
+ @media (max-width:1199px)
+ {
+    .aside
+    {
+        left: -270px;
+    }
+    .main-content
+    {
+        padding-left: 0;
+    }
+    .about .about-content .personal-info .info-item p span
+    {
+        display: block;
+        margin-left: 0;
+    }
+ }
+ @media (max-width:991px)
+{
+    .service .service-item,
+    .portfolio .portfolio-item,
+    .contact .contact-info-item
+    {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+    .home .home-info
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .home .home-img
+    {
+        display: none;
+    }
+}
+@media (max-width:991px)
+{
+    .contact .contact-form .col-6,
+    .contact .contact-info-item,
+    .portfolio .portfolio-item,
+    .service .service-item,
+    .about .about-content .experience,
+    .about .about-content .education,
+    .about .about-content .personal-info,
+    .about .about-content .skills
+    {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+}
